fixed more issues with pub bus layou on mobile

--- a/styles.css
+++ b/styles.css
@@ -1257,8 +1257,8 @@ footer {
         border-radius: 4px;
     }
 
-    .hero {
-        height: 120vh;
+    body.pub-bus-page .hero {
+        height: 125vh;
     }
 }
 
